Added page title

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <title></title>
+    <title>Brick Breaker</title>
   </head>
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
@@ -16,7 +16,7 @@
 
         canvasContext.fillStyle = 'black';
         canvasContext.fillRect(0,0, canvas.width, canvas.height);
-        
+
       }
     </script>
 
